Fix the z-index of the bg img to prevent bugs

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ button {
 }
 
 .bg-holder {
+    z-index: -1;
     position: absolute;
     width: 500px;
     height: 500px;
